# metadata_extractor_deluxe

./: .gitignore  Cargo.toml  README.md  index.html  init.sh  package.json
src/: lib.rs
